--- a/requirements.txt
+++ b/requirements.txt
@@ -37,4 +37,10 @@ typing_extensions==4.15.0
 tzdata==2025.2
 Werkzeug==3.1.3
 psycopg2-binary
-
+Flask
+gunicorn
+Flask-SQLAlchemy
+Flask-Login
+psycopg2-binary
+pandas
+openpyxl
